<resources>
    <string name="app_name">MyApplication</string>
    <string name="action_settings">Settings</string>
    <string name="editText1_hint">숫자1 입력</string>
    <string name="editText2_hint">숫자2 입력</string>
    <string name="button1_text">더하기</string>
    <string name="button2_text">빼기</string>
    <string name="button3_text">곱하기</string>
    <string name="button4_text">나누기</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="result">계산 결과 : </string>
</resources>
